// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AchievementExp component renders correctly 1`] = `
"<AchievementExp exp={0}>
  <div className=\\"exp\\" />
</AchievementExp>"
`;

exports[`AchievementExp component renders correctly 2`] = `
"<AchievementExp exp={[undefined]}>
  <div className=\\"exp\\" />
</AchievementExp>"
`;
